# advent-of-code

./: pyproject.toml
src/skidson/aoc/: runner.py
src/skidson/aoc/solve/: y2023m12d01.py  y2023m12d02.py  y2023m12d03.py  y2023m12d04.py  y2023m12d05.py
tests/: y2023m12d01.py  y2023m12d03.py  y2023m12d05.py
